# nautilus_trader

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  MIGRATION_V2.md  Makefile  README.md  RELEASES.md  ROADMAP.md  deny.toml  hawk.toml  osv-scanner.toml  pyproject.toml  rust-toolchain.toml  tools.toml
.cargo/: config.toml
.docker/: DockerfileUbuntu  README.md  docker-compose.yml  jupyterlab.dockerfile  nautilus_trader.dockerfile  preload-base-image.dockerfile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-v2.yml  build.yml  cli-binaries.yml  codeql-analysis.yml  docker.yml  dst.yml  nightly-docs-features-check.yml  nightly-miri.yml  nightly-tests.yml  security-audit.yml
.pre-commit-hooks/: check_cargo_conventions.sh  check_copyright_year.sh  check_dst_conventions.sh  check_error_conventions.sh  check_formatting_rs.sh  check_hidden_chars.sh  check_unicode_typography.sh  test_check_formatting_rs.sh  test_check_unicode_typography.sh
.supply-chain/: audits.toml  config.toml
crates/adapters/lighter/fuzz/: Cargo.toml  README.md
crates/adapters/lighter/fuzz/fuzz_targets/: fuzz_pornin_diff_algebra.rs  fuzz_pornin_diff_decode.rs  fuzz_pornin_diff_scalar_mul.rs
crates/cli/: Cargo.toml
crates/execution/: Cargo.toml
crates/live/: Cargo.toml
crates/pyo3/: Cargo.toml
crates/system/: Cargo.toml
python/: generate_docstrings.py  generate_stubs.py  pyproject.toml
scripts/: README.md  check-no-build-packages.sh  fuzz-adapter.sh  rust-toolchain.sh
(+1028 files in other folders)
