[package]
name = "nautilus-lighter-fuzz"
version = "0.0.0"
edition = "2024"
publish = false # Never publish to crates.io

[package.metadata]
cargo-fuzz = true

[dependencies]
# `ecgfp5` is Pornin's reference Rust implementation (zero transitive deps; pinned by commit).
# The differential targets soak our implementation against it under coverage-guided fuzzing.
ecgfp5 = { git = "https://github.com/pornin/ecgfp5", rev = "ce059c6d1e1662db437aecbf3db6bb67fe63c716", version = "0.1.0" }
nautilus-lighter = { path = ".." }
nautilus-live = { path = "../../../live", default-features = false, features = [
  "fuzz",
] }

[[bin]]
name = "fuzz_pornin_diff_scalar_mul"
path = "fuzz_targets/fuzz_pornin_diff_scalar_mul.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pornin_diff_algebra"
path = "fuzz_targets/fuzz_pornin_diff_algebra.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_pornin_diff_decode"
path = "fuzz_targets/fuzz_pornin_diff_decode.rs"
test = false
doc = false
bench = false

# Keep the git-pinned Pornin reference outside the published adapter package.
[workspace]
members = ["."]
